--- a/personal-website/src/App.css
+++ b/personal-website/src/App.css
@@ -36,7 +36,7 @@ body {
   /* background-color: #121212 !important; */
   color: #fff !important;
   font-family: 'Centra', sans-serif !important;
-  background: url('./assets/images/bg-1.jpg') no-repeat center center fixed;
+  background: url('./assets/images/bg-2.jpg') no-repeat center center fixed;
   background-size: cover;
 
 }
@@ -265,26 +265,73 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 
 /* Banner css */
+.banner-container{
+ display: flex;
+  flex-direction: column;
+  background: rgba(255, 255, 255, 0.2); 
+  border-radius: 8px;
+  box-shadow: 4px 5px 10px rgba(0, 0, 0, 0.2);
+  margin: 200px 400px 8px 400px;
+  transition: 0.3s;
+  box-sizing: border-box;
+  padding: 8px;
+}
 
 
 .banner {
 
+  display: inline-flex;
+  padding: 100px 100px 100px 100px;
+  
+  
 
-  padding: 260px 0 100px 0;
-  margin-top: 0;
-  display: flex;
   align-items: center;
   justify-content: center;
   font-size: 4rem;
   color: #fff;
   white-space: nowrap;
   overflow: hidden;
+
+}
+/* About.css */
+.profile-container{
+    width: 80%;
+    background: rgba(255, 255, 255, 0.2); 
+    border-radius:5px;
+    padding: 1em 2em;
+    /* background-color: #1c1c1c; */
+}
+.profile-text{
+    margin-left:20px;
 }
 
-/* .banner h1{
-  font-size: 2.5rem;
-  color: #fff;
-  white-space: nowrap;
-  overflow: hidden;
-  animation: typing 1s steps(40) 1s forwards, blink-caret 0.5s step-end infinite;
-} */
+.profile-img {
+    float: left;
+    margin-right: 20px;
+    margin-left:20px;
+    width: 250px;
+}
+
+.profile-img img {
+    width: 100%;
+}
+.center-container {
+    display:flex;
+    justify-content: center;
+    align-items:center;
+    height: 94vh;
+}
+
+/* for containers that require scrolling */
+.margin-down {
+    margin-top: 1vw;
+    align-items:flex-start;
+    margin-bottom: 5em;
+}
+
+.column-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 94vh;
+}
