--- a/personal-website/src/App.css
+++ b/personal-website/src/App.css
@@ -294,12 +294,19 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 }
 /* About.css */
+.center-container {
+    display:flex;
+    justify-content: center;
+    align-items:center;
+    height: 94vh;
+}
 .profile-container{
     width: 80%;
     background: rgba(255, 255, 255, 0.2); 
-    border-radius:5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    border-radius:1rem;
     padding: 1em 2em;
-    /* background-color: #1c1c1c; */
+    margin: 10em;
 }
 .profile-text{
     margin-left:20px;
@@ -315,12 +322,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .profile-img img {
     width: 100%;
 }
-.center-container {
-    display:flex;
-    justify-content: center;
-    align-items:center;
-    height: 94vh;
-}
+
 
 /* for containers that require scrolling */
 .margin-down {
@@ -334,4 +336,30 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
     flex-direction: column;
     align-items: center;
     height: 94vh;
+}
+/* Projects */
+
+
+ .swiper {
+  width: 40%;
+  height: 60vh;
+} 
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: rgba(255, 255, 255, 0.2); 
+  border-radius: 8px; 
+  padding: 20px; 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  /* display: block; */
+  width: 100%;
+  height: 100%;
+  object-fit:contain;
 }
