--- a/personal-website/src/App.css
+++ b/personal-website/src/App.css
@@ -341,8 +341,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 
  .swiper {
-  width: 40%;
-  height: 60vh;
+  width: 80vh;
+  height: 40vh;
 } 
 
 .swiper-slide {
@@ -361,5 +361,16 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   /* display: block; */
   width: 100%;
   height: 100%;
-  object-fit:contain;
+  object-fit:fill;
+}
+.img-caption {
+    position: absolute;
+    bottom: 15px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 14px;
 }
