--- a/personal-website/src/App.css
+++ b/personal-website/src/App.css
@@ -1,19 +1,19 @@
 /* Custom Fonts */
 @font-face {
   font-family: Centra;
-  src: url('./assets/fonts/centra-font-family-1717166627-0/CentraNo2-Bold-BF646c26904e7ce.ttf');
+  src: url('./assets/fonts/kindly-rewind-font/KindlyRewind-BOon.ttf');
   font-weight: 700;
 }
 
 @font-face {
   font-family: Centra;
-  src: url('./assets/fonts/centra-font-family-1717166627-0/CentraNo2-Medium-BF646c26901ce01.ttf');
+  src: url('./assets/fonts/kindly-rewind-font/KindlyRewind-BOon.ttf');
   font-weight: 500;
 }
 
 @font-face {
   font-family: Centra;
-  src: url('./assets/fonts/centra-font-family-1717166627-0/CentraNo2-Book-BF646c2690591ba.ttf');
+  src: url('./assets/fonts/kindly-rewind-font/KindlyRewind-BOon.ttf');
   font-weight: 400;
 }
 
@@ -33,10 +33,10 @@ body {
   font-weight: 400;
   overflow-x: hidden;
   position: relative;
-  /* background-color: #121212 !important; */
+  background-color: #3014fc !important;
   color: #fff !important;
   font-family: 'Centra', sans-serif !important;
-  background: url('./assets/images/bg-2.jpg') no-repeat center center fixed;
+  /* background: url('./assets/images/tv-static.gif') no-repeat center center fixed;  */
   background-size: cover;
 
 }
@@ -265,13 +265,36 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 
 /* Banner css */
-.banner-container{
- display: flex;
+.home-container {
+  margin-top: 10rem;
+  margin-bottom: 25rem;
+}
+
+.banner-container {
+  display: flex;
   flex-direction: column;
-  background: rgba(255, 255, 255, 0.2); 
+  /* background: rgba(255, 255, 255, 0.2);  */
+  background: url('./assets/images/tv-static.gif') no-repeat center center fixed;
+  background-size: cover;
+
   border-radius: 8px;
   box-shadow: 4px 5px 10px rgba(0, 0, 0, 0.2);
   margin: 200px 400px 8px 400px;
+  transition: 0.3s;
+  box-sizing: border-box;
+  padding: 8px;
+}
+
+.framework-container {
+  display: flex;
+  flex-direction: column;
+  background: rgba(255, 255, 255, 0.2);
+  /* background: url('./assets/images/tv-static.gif') no-repeat center center fixed;   */
+  background-size: cover;
+
+  border-radius: 8px;
+  box-shadow: 4px 5px 10px rgba(0, 0, 0, 0.2);
+  margin: 2px 4px 8px 4px;
   transition: 0.3s;
   box-sizing: border-box;
   padding: 8px;
@@ -282,8 +305,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
   display: inline-flex;
   padding: 100px 100px 100px 100px;
-  
-  
+
+
 
   align-items: center;
   justify-content: center;
@@ -293,90 +316,155 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   overflow: hidden;
 
 }
+
 /* About.css */
 .center-container {
-    display:flex;
-    justify-content: center;
-    align-items:center;
-    height: 94vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 94vh;
 }
-.profile-container{
-    width: 80%;
-    background: rgba(255, 255, 255, 0.2); 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-    border-radius:1rem;
-    padding: 1em 2em;
-    margin: 10em;
+
+.profile-container {
+  width: 80%;
+  background: rgba(255, 255, 255, 0.2);
+
+
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 1rem;
+  padding: 1em 2em;
+  margin: 10em;
 }
-.profile-text{
-    margin-left:20px;
+
+.profile-text {
+  margin-left: 20px;
 }
 
 .profile-img {
-    float: left;
-    margin-right: 20px;
-    margin-left:20px;
-    width: 250px;
+  float: left;
+  margin-right: 20px;
+  margin-left: 20px;
+  width: 250px;
 }
 
 .profile-img img {
-    width: 100%;
+  width: 100%;
 }
 
 
 /* for containers that require scrolling */
 .margin-down {
-    margin-top: 1vw;
-    align-items:flex-start;
-    margin-bottom: 5em;
+  margin-top: 1vw;
+  align-items: flex-start;
+  margin-bottom: 5em;
 }
 
 .column-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 94vh;
-}
-/* Projects */
-
-
- .swiper {
-  width: 80vh;
-  height: 40vh;
-} 
-
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: rgba(255, 255, 255, 0.2); 
-  border-radius: 8px; 
-  padding: 20px; 
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+  height: 94vh;
 }
 
-.swiper-slide img {
-  /* display: block; */
-  width: 100%;
-  height: 100%;
-  object-fit:fill;
-}
-.img-caption {
-    position: absolute;
-    bottom: 15px;
-    left: 50%;
-    transform: translateX(-50%);
-    background: rgba(0, 0, 0, 0.5);
-    color: #fff;
-    padding: 5px 10px;
-    border-radius: 5px;
-    font-size: 14px;
-}
+
+
+
+
+
 /* framework.js */
-.marquee-img{
-  width:7vh;
+.marquee-img {
+  width: 7vh;
   height: 10vh;
   margin: 1em;
+}
+
+
+
+
+.project-container {
+ margin-top: 5em;
+ 
+ margin-left: 12em;
+  display: grid;
+  
+  align-items: center;
+  justify-content: center;
+
+  grid-template-columns: repeat(2, 0.5fr);
+  grid-template-rows: repeat(2, 0.5fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+
+
+
+}
+
+#proj1 {
+  grid-area: 1 / 1 / 2 / 2;
+}
+
+#proj2 {
+  grid-area: 1 / 2 / 2 / 3;
+}
+
+#proj3 {
+  grid-area: 2 / 1 / 3 / 2;
+}
+
+#proj4 {
+  grid-area: 2 / 2 / 3 / 3;
+}
+
+.project {
+
+  padding: 1em;
+  margin: 2em 0 0 2em;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 1rem;
+  border: solid rgba(0, 0, 0, 0.2);
+  width: 60vh;
+  height: 60vh;
+  box-shadow: 4px 5px 10px rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(1.5px);
+  position: relative;
+  
+
+
+}
+
+.project img {
+  position: relative;
+  width: 100%;
+  border-radius: 0.4rem;
+  box-shadow: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(1.5px);
+}
+
+.img-caption {
+  position: relative;
+  text-align: start;
+  margin: 1em;
+  right: 1em;
+
+  /* background: rgba(0, 0, 0, 0.5); */
+
+  /* padding: 5px 10px; */
+
+
+}
+
+.img-caption h4 {
+  color: #fff;
+
+  -webkit-text-stroke: 0.6px #3014fc;
+}
+
+.project a {
+  text-decoration: none;
+}
+
+.img-text {
+  position: relative;
+  top: 5em;
+  right: 3em;
 }
