--- a/personal-website/src/App.css
+++ b/personal-website/src/App.css
@@ -487,10 +487,10 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 
 .footer-container {
-  background-color:rgba(255, 255, 255, 0.2);
+  background-color: rgba(255, 255, 255, 0.2);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  border:solid rgba(0, 0, 0, 0.2);
-   box-shadow: 4px 5px 10px rgba(0, 0, 0, 0.2);
+  border: solid rgba(0, 0, 0, 0.2);
+  box-shadow: 4px 5px 10px rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(1.5px);
 
   display: grid;
@@ -498,14 +498,14 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   grid-template-rows: 1fr;
   grid-column-gap: 0px;
   grid-row-gap: 0px;
-  
+
 
   max-height: min-content;
-  max-width:100%;
+  max-width: 100%;
   padding: 0.5em;
- 
-    align-items: center; 
-    text-align: center; 
+
+  align-items: center;
+  text-align: center;
 
 }
 
@@ -515,15 +515,16 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   display: flex;
   justify-content: center;
   gap: 1em;
-  margin: 2em 0 2em 0;
+  margin: 0.4em 0 0.4em 0;
 
 }
 
 .contacts-footer {
   display: flex;
-  flex-direction: column; /* Stack text and buttons vertically */
-    align-items: center;
-    justify-content: center;
+  flex-direction: column;
+  /* Stack text and buttons vertically */
+  align-items: center;
+  justify-content: center;
 
 }
 
@@ -544,8 +545,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 
 #contact-footer img {
-  width: 2em;
-  height: 2em;
+  width: 1em;
+  height: 1em;
 
 }
 
@@ -555,19 +556,22 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 
 #contact-footer {
+  display: flex;
   background: rgba(255, 255, 255, 0.6);
   border-radius: 100%;
   border: solid rgba(0, 0, 0, 0.2);
   box-shadow: 4px 5px 10px rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(1.5px);
   cursor: pointer;
-  padding: 0.5em;
+  padding: 0.2em;
   transition: transform 0.2s ease-in-out;
+  width:25%;
 
 }
 
 .footer-text {
-    display: flex;
-    flex-direction: column; /* Stack text vertically */
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  /* Stack text vertically */
+  align-items: center;
 }
