--- a/personal-website/src/App.css
+++ b/personal-website/src/App.css
@@ -49,6 +49,7 @@ h5 {
   padding: 0;
   line-height: normal;
 }
+
 img {
   -webkit-user-drag: none;
   user-drag: none;
@@ -58,72 +59,7 @@ img {
   user-select: none;
 }
 
-/* Navbar Css */
-nav.navbar {
-  padding: 18px 0;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  z-index: 9999;
-  transition: 0.32s ease-in-out;
-}
 
-nav.navbar.scrolled {
-  padding: 0px 0;
-  background-color: rgba(18, 18, 18, 0.9);
-}
-
-nav.navbar a.navbar-brand {
-  width: 9%;
-}
-
-nav.navbar .navbar-nav .nav-link.navbar-link {
-  font-weight: 400;
-  color: #fff !important;
-  letter-spacing: 0.8px;
-  padding: 0 25px;
-  font-size: 18px;
-  opacity: 0.75;
-}
-
-nav.navbar .navbar-nav a.nav-link.navbar-link:hover,
-nav.navbar .navbar-nav a.nav-link.navbar-link.active {
-  opacity: 1;
-}
-
-span.navbar-text {
-  display: flex;
-  align-items: center;
-}
-
-.social-icon {
-  display: inline-block;
-  margin-left: 14px;
-}
-
-.social-icon a {
-  width: 42px;
-  height: 42px;
-  background: rgba(217, 217, 217, 0.1);
-  display: inline-flex;
-  border-radius: 50%;
-  margin-right: 6px;
-  align-items: center;
-  justify-content: center;
-  line-height: 1;
-  border: 1px solid rgba(255, 255, 255, 0.5);
-}
-
-.social-icon a::before {
-  content: "";
-  width: 42px;
-  height: 42px;
-  position: absolute;
-  background-color: #ffffff;
-  border-radius: 50%;
-  transform: scale(0);
-  transition: 0.3s ease-in-out;
-}
 
 .social-icon a:hover::before {
   transform: scale(1);
@@ -139,97 +75,6 @@ span.navbar-text {
   filter: brightness(0) saturate(100%) invert(0%) sepia(7%) saturate(98%) hue-rotate(346deg) brightness(95%) contrast(86%);
 }
 
-.navbar-text button {
-  font-weight: 700;
-  color: #fff;
-  border: 1px solid #fff;
-  padding: 18px 34px;
-  font-size: 18px;
-  margin-left: 18px;
-  position: relative;
-  background-color: transparent;
-  transition: 0.3s ease-in-out;
-}
-
-.navbar-text button span {
-  z-index: 1;
-}
-
-.navbar-text button::before {
-  content: "";
-  width: 0%;
-  height: 100%;
-  position: absolute;
-  background-color: #fff;
-  left: 0;
-  top: 0;
-  z-index: -1;
-  transition: 0.3s ease-in-out;
-}
-
-.navbar-text button:hover {
-  color: #121212;
-}
-
-.navbar-text button:hover::before {
-  content: "";
-  width: 100%;
-  height: 100%;
-  position: absolute;
-}
-
-nav.navbar .navbar-toggler:active,
-nav.navbar .navbar-toggler:focus {
-  outline: none;
-  box-shadow: none;
-}
-
-nav.navbar .navbar-toggler-icon {
-  width: 24px;
-  height: 17px;
-  background-image: none;
-  position: relative;
-  border-bottom: 2px solid #fff;
-  transition: all 300ms linear;
-  top: -2px;
-}
-
-nav.navbar .navbar-toggler-icon:focus {
-  border-bottom: 2px solid #fff;
-}
-
-nav.navbar .navbar-toggler-icon:after,
-nav.navbar .navbar-toggler-icon:before {
-  width: 24px;
-  position: absolute;
-  height: 2px;
-  background-color: #fff;
-  top: 0;
-  left: 0;
-  content: '';
-  z-index: 2;
-  transition: all 300ms linear;
-}
-
-nav.navbar .navbar-toggler-icon:after {
-  top: 8px;
-}
-
-nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:after {
-  transform: rotate(45deg);
-  background-color: #fff;
-  height: 2px;
-}
-
-nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before {
-  transform: translateY(8px) rotate(-45deg);
-  background-color: #fff;
-  height: 2px;
-}
-
-nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
-  border-color: transparent;
-}
 
 
 .App {
@@ -274,8 +119,10 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 /* Banner css */
 .home-container {
-  margin-top: 10rem;
-  margin-bottom: 25rem;
+  /* margin-top: 10rem; */
+  margin-bottom: 15rem;
+  padding-top: 10rem;
+
 }
 
 .banner-container {
@@ -302,7 +149,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
   border-radius: 8px;
   box-shadow: 4px 5px 10px rgba(0, 0, 0, 0.2);
-  margin: 2px 4px 8px 4px;
+  margin: 5em 0.3em 5em 0.3em;
   transition: 0.3s;
   box-sizing: border-box;
   padding: 8px;
@@ -324,18 +171,21 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 /* About.css */
 .center-container {
+  margin-top: 10rem;
+  margin-bottom: 10rem;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 150vh;
 }
 
-#About h2{
+#About h2 {
   margin-top: 0em;
   margin-bottom: 2em;
 }
 
-.profile-container, .work-container{
+.profile-container,
+.work-container {
   float: bottom;
   background: rgba(255, 255, 255, 0.2);
   margin: 1em 2em 2em 2em;
@@ -344,26 +194,42 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   padding: 1em 2em;
   text-align: start;
 }
-.work-container{
-  
-}
-.profile-text a{
- color:#fff;
-}
-.work-head a{
-   color:#fff;
+
+.outer-work-container {
+  margin-top: 10rem;
+  margin-bottom: 10rem;
 
 }
-.work-head{
+
+.profile-text a {
+  color: #fff;
+}
+
+.work-head a {
+  color: #fff;
+
+}
+
+.work-head {
   margin-top: 0em;
   margin-bottom: 2em;
 
 
 }
-.work-text{
+
+.work-text {
   margin-top: 2em;
   margin-bottom: 2em;
   font-size: 1.3em;
+}
+
+.work-text ul {
+  list-style: none;
+}
+
+.outer-framework-container {
+  margin-top: 10rem;
+  margin-bottom: 10rem;
 }
 
 
@@ -419,7 +285,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   display: flexbox;
   justify-content: center;
   align-items: center;
-  margin: 2em 0em 2em 0em;
+  margin-top: 10rem;
+  margin-bottom: 10rem;
 }
 
 
@@ -438,8 +305,10 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 1fr);
-  /* grid-column-gap: 0px;
-  grid-row-gap: 0px; */
+
+  column-gap: 0.5em;
+  row-gap: 0.5em;
+  padding: 0 11rem;
 
 
 
@@ -464,7 +333,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .project {
 
   padding: 1em;
-  margin: 2em 0 2em 0em;
+  margin: 1em 0;
   background: rgba(255, 255, 255, 0.2);
   border-radius: 1rem;
   border: solid rgba(0, 0, 0, 0.2);
@@ -503,8 +372,6 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 .img-caption h4 {
   color: #fff;
-
-  -webkit-text-stroke: 0.6px #3014fc;
 }
 
 .project a {
@@ -513,14 +380,15 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 .img-text {
   position: relative;
-  margin-top: 4em;
+  margin-top: 0.5em;
   text-align: start;
 }
 
 .contact-container {
   text-align: center;
   padding: 2em;
-  margin: 2em 0 2em 0;
+  margin-top: 10rem;
+  margin-bottom: 2rem;
 }
 
 .footer-container {
@@ -612,5 +480,3 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   /* Stack text vertically */
   align-items: center;
 }
-
-
