--- a/personal-website/src/App.css
+++ b/personal-website/src/App.css
@@ -402,7 +402,7 @@ img {
   backdrop-filter: blur(1.5px);
 
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr;
   grid-template-rows: 1fr;
   grid-column-gap: 0px;
   grid-row-gap: 0px;
@@ -779,8 +779,8 @@ img {
     background-color: rgba(255, 255, 255, 0.2);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 1em;
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
     align-items: center;
     text-align: center;
   }
