--- a/src/App.css
+++ b/src/App.css
@@ -634,8 +634,13 @@ img {
 
   /* Banner css */
   .home-container {
-    margin-bottom: 10em;
-    padding-top: 5em;
+    
+    
+    padding-top: 20em;
+    padding-bottom: 5em;
+   
+    margin-bottom: 28em; 
+   
   }
 
 
