--- a/src/App.css
+++ b/src/App.css
@@ -33,9 +33,10 @@ body {
   font-weight: 800;
   overflow-x: hidden;
   position: relative;
-  background-color: #3014fc !important;
+  background-color: #067476 !important;
   color: #EFEFEF !important;
-  font-family: Helvetica !important;
+  /* font-family: Helvetica !important; */
+  
 
 
   /* background: url('./assets/images/tv-static.gif') no-repeat center center fixed;  */
@@ -168,7 +169,7 @@ img {
   align-items: center;
   justify-content: center;
   font-size: 4rem;
-  color: #fff;
+  color: #0c249a;
   white-space: nowrap;
   overflow: hidden;
   font-family: 'Centra', sans-serif !important;
