--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* Kindly Rewind font */
+@font-face {
+  font-family: 'Kindly Rewind';
+  src: url('./assets/fonts/kindly-rewind-font/KindlyRewind-BOon.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+/* Ensure typewriter library spans inherit / enforce Kindly Rewind */
+.Typewriter__wrapper, .Typewriter__cursor {
+  font-family: 'Kindly Rewind', sans-serif !important;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Kindly Rewind', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
